Fix bugs and with JWT token

--- a/music/src/main/resources/templates/blocks/header.html
+++ b/music/src/main/resources/templates/blocks/header.html
@@ -3,11 +3,11 @@
     <ul>
       <li class="li"><p style="color: #F2F2F2">For<br>Music</p></li>
       <li class="li2"><a href="/admin">Home</a></li>
-      <li class="li2"><a href="/user">Music</a></li>
+      <li class="li2"><a href="/login">Music</a></li>
       <li class="li2"><a href="">About us</a></li>
       <li class="li2"><a href="">Support</a></li>
       <li class="liB">
-        <a class="login" href="">Login</a>&nbsp;&nbsp;
+        <a class="login" href="/login">Login</a>&nbsp;&nbsp;
         <a class="sign" href="/">Logout</a>
       </li>
     </ul>
